vpcWithpubAndpriNet/vpc.tf
resource "aws_vpc" "prod-vpc" {
  cidr_block="10.10.0.0/16"
  enable_dns_support="true"
  enable_dns_hostnames="true"
  //enable_classiclink="false"
  instance_tenancy="default"
  
  tags = {
    Name ="prod-vpc"
  }
}

resource "aws_subnet" "prod-subnet-public-1" {
  vpc_id = "${aws_vpc.prod-vpc.id}"
  cidr_block ="10.10.0.0/24"
  map_public_ip_on_launch = "true" //make this into public subnet
  availability_zone ="us-east-2a"

  tags = { 
    Name ="prod-subnet-public-1"
  }
}

resource "aws_subnet" "prod-subnet-private-1" {
  vpc_id = "${aws_vpc.prod-vpc.id}"
  cidr_block ="10.10.1.0/24"
  map_public_ip_on_launch = "false"
  tags = {
    Name = "prod-subnet-private-1"
  }
}
